--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.39",
-    "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "clsx": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.2",
+    "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.4",
     "sass": "^1.64.2",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.6",
     "styled-components": "^6.0.8",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -50,7 +51,9 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^18.2.37",
     "@types/react-select": "^5.0.1",
+    "@types/sqlite3": "^3.1.11",
     "@types/styled-components": "^5.1.27"
   }
 }
