--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/cors": "^2.8.16",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.39",
     "@types/react-dom": "^18.2.7",
     "clsx": "^2.0.0",
+    "cors": "^2.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.19.0",
@@ -51,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/react": "^18.2.37",
     "@types/react-select": "^5.0.1",
     "@types/sqlite3": "^3.1.11",
