--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "license": "MIT",
+  "type": "module",
   "dependencies": {
     "@fnando/cnpj": "^1.0.2",
     "@styled-icons/material": "^10.47.0",
@@ -14,6 +15,7 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.39",
     "@types/react-dom": "^18.2.7",
+    "axios": "^1.6.2",
     "clsx": "^2.0.0",
     "cors": "^2.8.5",
     "react": "^18.2.0",
@@ -25,14 +27,14 @@
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.6",
     "styled-components": "^6.0.8",
-    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "node --loader ts-node/esm src/database/server.ts"
   },
   "eslintConfig": {
     "extends": [
@@ -57,6 +59,8 @@
     "@types/react": "^18.2.37",
     "@types/react-select": "^5.0.1",
     "@types/sqlite3": "^3.1.11",
-    "@types/styled-components": "^5.1.27"
+    "@types/styled-components": "^5.1.27",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
