--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
     "cors": "^2.8.5",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.19.0",
@@ -27,6 +28,7 @@
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.6",
     "styled-components": "^6.0.8",
+    "typescript": "^5.2.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
