--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
     "cors": "^2.8.5",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -58,6 +59,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/react": "^18.2.37",
     "@types/react-select": "^5.0.1",
     "@types/sqlite3": "^3.1.11",
